Optimization series 1- Curated Packs System,Multi-step strategies, prompt externalization- Target resolution, vector space scoping Compliance (#132)
* Add docs Curated modules

* phase 1,2 New curated mode

* phase 3,4 Attchments

* Phase 5 (Target resolution + scoping) Phase 6 (Working set)

Phase 5 (Target resolution + scoping): implemented (target resolution step + vectorSpace scoping + “pinned targets” grounding + action param fill from targets).
Phase 6 (Working set): implemented (persist per-turn working set + gated reuse via WorkingSetTargetSeedingStep when requiresTargetResolution=t

* fix phase 5,6

* phase 7,8

Phase 7 (curated packs): pack loader + ai-curated-{catalog,commerce,support} modules; Real_Apps/chat-capabilities-demo now uses ai.curated.pack: catalog (application.yml (line 15)).
Phase 8 (intent metadata → retrieval hints): the orchestrator now supports intentResponse.metadata.retrievalQueryHint and appends it to the retrieval query only when it’s safe and there is exactly one retrieval intent; it sets retrievalQueryHintApplied in the RAG request metadata (IntentHandlingStep.java (line 1136)). Covered by IntentHandlingStepRetrievalQueryHintTest.java (line 1).

* Apply curatted for apps

* add guides

* Add docs and changes plans

* externalize Prompots

* Attachment-Authoritative-Grounding

* enforce navigator mode for testing.

* Orchestration Contract unification and generation,Rag search optimizations

* Fix1 - LLM is responsing ignoring the Attachments

* fix Rag search execution  Prompt

* Externalization of prompots

* Fix Relationship Query Tests

* Optimise Deterministic Rag for less searches

* Opomizing navigator , introducte deep navigator

What I changed (and why)

Breaking request contract: attachments[].contentSnippet → attachments[].contentText so the LLM can be grounded on “large enough” pinned content (not just a tiny snippet). See OrchestrationAttachment.java (line 20).
Authoritative attachment grounding: normalized attachments 